--- a/src/components/LandingPage/landingpage.css
+++ b/src/components/LandingPage/landingpage.css
@@ -1,8 +1,8 @@
-.Gradient {
+.gradient {
     background: linear-gradient(180deg, #EBF5FF 25%, rgba(255, 255, 255, 0) 100%, rgba(255, 255, 255, 0) 100%);
 }
 
-.Heading {
+.heading {
     font-style: normal;
     font-weight: 700;
     line-height: 128%;
